# surveillance-video-system-plugin

./: .gitignore  CMakeLists.txt  README.md  cmake.txt
pkgconfig/: SVS-plugin.pc
src/: ReDetection.cpp  ReDetection.h  test_ReDetection.cpp
test/: test4_dll.cpp
